added move function, fixed some bugs

--- a/src/main/resources/fxml/MainFrame.fxml
+++ b/src/main/resources/fxml/MainFrame.fxml
@@ -42,6 +42,7 @@
                         <Button fx:id="btnRename" layoutX="179.0" layoutY="12.0" mnemonicParsing="false" onAction="#buttonAction" text="Rename" />
                         <Button fx:id="btnDelete" layoutX="330.0" layoutY="13.0" mnemonicParsing="false" onAction="#deleteEntries" text="Delete" />
                         <Button fx:id="btnCopy" layoutX="393.0" layoutY="13.0" mnemonicParsing="false" onAction="#copyEntries" text="Copy" />
+                        <Button fx:id="btnMove" layoutX="448.0" layoutY="13.0" mnemonicParsing="false" onAction="#moveEntries" text="Move" />
                     </items>
                   </ToolBar>
                </children>
@@ -109,6 +110,7 @@
                         <Button fx:id="btnRenameRight" layoutX="179.0" layoutY="12.0" mnemonicParsing="false" onAction="#buttonAction" text="Rename" />
                         <Button fx:id="btnDeleteRight" mnemonicParsing="false" onAction="#deleteEntries" text="Delete" />
                         <Button fx:id="btnCopyRight" mnemonicParsing="false" onAction="#copyEntries" text="Copy" />
+                        <Button fx:id="btnMoveRight" layoutX="448.0" layoutY="13.0" mnemonicParsing="false" onAction="#moveEntries" text="Move" />
                      </items>
                   </ToolBar>
                </children>
